Simplification of transformation for models and skeleton bones Removed 'global' argument from Lua function for model's position/rotation/scale New Lua functions: setClipboard, getClipboard Simplified error handling for ArgReader Added detection fo DPad buttons for VR controllers Shutdown of application if SteamVR is shutting down

--- a/run_on_coal/run_on_coal.vcxproj
+++ b/run_on_coal/run_on_coal.vcxproj
@@ -317,6 +317,7 @@
     <ClInclude Include="Utils\PathUtils.h" />
     <ClInclude Include="Utils\Pool.h" />
     <ClInclude Include="Utils\SystemTick.h" />
+    <ClInclude Include="Utils\Transformation.h" />
     <ClInclude Include="Utils\TreeNode.h" />
     <ClInclude Include="Utils\zlibUtils.h" />
   </ItemGroup>
@@ -429,6 +430,7 @@
     <ClCompile Include="Utils\PathUtils.cpp" />
     <ClCompile Include="Utils\Pool.cpp" />
     <ClCompile Include="Utils\SystemTick.cpp" />
+    <ClCompile Include="Utils\Transformation.cpp" />
     <ClCompile Include="Utils\TreeNode.cpp" />
     <ClCompile Include="..\vendor\pugixml\pugixml.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
