--- a/roc_server/roc_server.vcxproj
+++ b/roc_server/roc_server.vcxproj
@@ -168,7 +168,6 @@
     <ClInclude Include="Elements\Element.h" />
     <ClInclude Include="Elements\File.h" />
     <ClInclude Include="Lua\ArgReader.h" />
-    <ClInclude Include="Lua\LuaArguments.h" />
     <ClInclude Include="Lua\LuaDefs\LuaClientDef.h" />
     <ClInclude Include="Lua\LuaDefs\LuaElementDef.h" />
     <ClInclude Include="Lua\LuaDefs\LuaEventsDef.h" />
@@ -183,7 +182,8 @@
     <ClInclude Include="Managers\NetworkManager.h" />
     <ClInclude Include="RocInc.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="Utils\CustomData.h" />
+    <ClInclude Include="Utils\CustomArgument.h" />
+    <ClInclude Include="Utils\CustomArguments.h" />
     <ClInclude Include="Utils\EnumUtils.h" />
     <ClInclude Include="Utils\LuaUtils.h" />
     <ClInclude Include="Utils\PathUtils.h" />
@@ -206,7 +206,6 @@
     <ClCompile Include="Elements\Element.cpp" />
     <ClCompile Include="Elements\File.cpp" />
     <ClCompile Include="Lua\ArgReader.cpp" />
-    <ClCompile Include="Lua\LuaArguments.cpp" />
     <ClCompile Include="Lua\LuaDefs\LuaClientDef.cpp" />
     <ClCompile Include="Lua\LuaDefs\LuaElementDef.cpp" />
     <ClCompile Include="Lua\LuaDefs\LuaEventsDef.cpp" />
@@ -226,7 +225,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Utils\CustomData.cpp" />
+    <ClCompile Include="Utils\CustomArgument.cpp" />
+    <ClCompile Include="Utils\CustomArguments.cpp" />
     <ClCompile Include="Utils\EnumUtils.cpp" />
     <ClCompile Include="Utils\LuaUtils.cpp" />
     <ClCompile Include="Utils\PathUtils.cpp" />
