--- a/roc_server/roc_server.vcxproj.filters
+++ b/roc_server/roc_server.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClCompile Include="Lua\ArgReader.cpp">
       <Filter>Lua</Filter>
     </ClCompile>
-    <ClCompile Include="Lua\LuaArguments.cpp">
-      <Filter>Lua</Filter>
-    </ClCompile>
     <ClCompile Include="..\vendor\luautf8\lutf8lib.c">
       <Filter>vendor\luautf8</Filter>
     </ClCompile>
@@ -38,9 +35,6 @@
     </ClCompile>
     <ClCompile Include="Elements\Element.cpp">
       <Filter>Elements</Filter>
-    </ClCompile>
-    <ClCompile Include="Utils\CustomData.cpp">
-      <Filter>Utils</Filter>
     </ClCompile>
     <ClCompile Include="Lua\LuaDefs\LuaElementDef.cpp">
       <Filter>Lua\LuaDefs</Filter>
@@ -75,6 +69,12 @@
     <ClCompile Include="Managers\LuaManager\LuaManager.cpp">
       <Filter>Managers\LuaManager</Filter>
     </ClCompile>
+    <ClCompile Include="Utils\CustomArgument.cpp">
+      <Filter>Utils</Filter>
+    </ClCompile>
+    <ClCompile Include="Utils\CustomArguments.cpp">
+      <Filter>Utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -97,9 +97,6 @@
     <ClInclude Include="Lua\ArgReader.h">
       <Filter>Lua</Filter>
     </ClInclude>
-    <ClInclude Include="Lua\LuaArguments.h">
-      <Filter>Lua</Filter>
-    </ClInclude>
     <ClInclude Include="Elements\Client.h">
       <Filter>Elements</Filter>
     </ClInclude>
@@ -108,9 +105,6 @@
     </ClInclude>
     <ClInclude Include="Elements\Element.h">
       <Filter>Elements</Filter>
-    </ClInclude>
-    <ClInclude Include="Utils\CustomData.h">
-      <Filter>Utils</Filter>
     </ClInclude>
     <ClInclude Include="Lua\LuaDefs\LuaElementDef.h">
       <Filter>Lua\LuaDefs</Filter>
@@ -144,6 +138,12 @@
     </ClInclude>
     <ClInclude Include="Managers\LuaManager\LuaManager.h">
       <Filter>Managers\LuaManager</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils\CustomArgument.h">
+      <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils\CustomArguments.h">
+      <Filter>Utils</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
