--- a/run_on_coal/run_on_coal.vcxproj
+++ b/run_on_coal/run_on_coal.vcxproj
@@ -292,11 +292,11 @@
     <ClInclude Include="Managers\AsyncManager\AsyncGeometryTask.h" />
     <ClInclude Include="Managers\AsyncManager\AsyncManager.h" />
     <ClInclude Include="Managers\AsyncManager\AsyncTask.h" />
+    <ClInclude Include="Managers\AsyncManager\AsyncTextureTask.h" />
     <ClInclude Include="Managers\ConfigManager.h" />
     <ClInclude Include="Managers\ElementManager.h" />
     <ClInclude Include="Managers\LogManager.h" />
     <ClInclude Include="Lua\ArgReader.h" />
-    <ClInclude Include="Lua\LuaArguments.h" />
     <ClInclude Include="Managers\LuaManager\EventManager.h" />
     <ClInclude Include="Managers\LuaManager\LuaManager.h" />
     <ClInclude Include="Managers\NetworkManager.h" />
@@ -312,7 +312,8 @@
     <ClInclude Include="RocInc.h" />
     <ClInclude Include="Managers\SoundManager.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="Utils\CustomData.h" />
+    <ClInclude Include="Utils\CustomArgument.h" />
+    <ClInclude Include="Utils\CustomArguments.h" />
     <ClInclude Include="Utils\EnumUtils.h" />
     <ClInclude Include="Utils\GLBinder.h" />
     <ClInclude Include="Utils\LuaUtils.h" />
@@ -399,11 +400,11 @@
     <ClCompile Include="Managers\AsyncManager\AsyncGeometryTask.cpp" />
     <ClCompile Include="Managers\AsyncManager\AsyncManager.cpp" />
     <ClCompile Include="Managers\AsyncManager\AsyncTask.cpp" />
+    <ClCompile Include="Managers\AsyncManager\AsyncTextureTask.cpp" />
     <ClCompile Include="Managers\ConfigManager.cpp" />
     <ClCompile Include="Managers\ElementManager.cpp" />
     <ClCompile Include="Managers\LogManager.cpp" />
     <ClCompile Include="Lua\ArgReader.cpp" />
-    <ClCompile Include="Lua\LuaArguments.cpp" />
     <ClCompile Include="Managers\LuaManager\EventManager.cpp" />
     <ClCompile Include="Managers\LuaManager\LuaManager.cpp" />
     <ClCompile Include="Managers\NetworkManager.cpp" />
@@ -423,7 +424,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Utils\CustomData.cpp" />
+    <ClCompile Include="Utils\CustomArgument.cpp" />
+    <ClCompile Include="Utils\CustomArguments.cpp" />
     <ClCompile Include="Utils\EnumUtils.cpp" />
     <ClCompile Include="Utils\GLBinder.cpp" />
     <ClCompile Include="Utils\GlobalConstants.cpp">
