--- a/animConverter/animConverter.vcxproj.filters
+++ b/animConverter/animConverter.vcxproj.filters
@@ -3,8 +3,10 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Animation.cpp" />
+    <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h" />
+    <ClInclude Include="stdafx.h" />
   </ItemGroup>
 </Project>
