--- a/roc_server_module_lua/roc_server_module_lua.vcxproj.filters
+++ b/roc_server_module_lua/roc_server_module_lua.vcxproj.filters
@@ -3,9 +3,6 @@
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="stdafx.cpp" />
-    <ClCompile Include="Lua\ArgReader.cpp">
-      <Filter>Lua</Filter>
-    </ClCompile>
     <ClCompile Include="Lua\LuaVM.cpp">
       <Filter>Lua</Filter>
     </ClCompile>
@@ -48,12 +45,12 @@
     <ClCompile Include="..\shared\Lua\LuaArgument.cpp">
       <Filter>shared\Lua</Filter>
     </ClCompile>
+    <ClCompile Include="Lua\LuaArgReader.cpp">
+      <Filter>Lua</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="Lua\ArgReader.h">
-      <Filter>Lua</Filter>
-    </ClInclude>
     <ClInclude Include="Lua\LuaVM.h">
       <Filter>Lua</Filter>
     </ClInclude>
@@ -77,6 +74,9 @@
     </ClInclude>
     <ClInclude Include="Lua\LuaDefs\LuaUtilsDef.h">
       <Filter>Lua\LuaDefs</Filter>
+    </ClInclude>
+    <ClInclude Include="Lua\LuaArgReader.h">
+      <Filter>Lua</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
