--- a/roc_server_module_lua/roc_server_module_lua.vcxproj
+++ b/roc_server_module_lua/roc_server_module_lua.vcxproj
@@ -175,7 +175,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Lua\ArgReader.h" />
+    <ClInclude Include="Lua\LuaArgReader.h" />
     <ClInclude Include="Lua\LuaDefs\LuaClientDef.h" />
     <ClInclude Include="Lua\LuaDefs\LuaElementDef.h" />
     <ClInclude Include="Lua\LuaDefs\LuaEventsDef.h" />
@@ -237,7 +237,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Use</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Use</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Lua\ArgReader.cpp" />
+    <ClCompile Include="Lua\LuaArgReader.cpp" />
     <ClCompile Include="Lua\LuaDefs\LuaClientDef.cpp" />
     <ClCompile Include="Lua\LuaDefs\LuaElementDef.cpp" />
     <ClCompile Include="Lua\LuaDefs\LuaEventsDef.cpp" />
